replaced package gg_arrange with ggpubr

--- a/Impact_model_method/1cyanoHAB_season.Rmd
+++ b/Impact_model_method/1cyanoHAB_season.Rmd
@@ -16,7 +16,7 @@ a) loading the dependent packages...
 ```{r}
 library(ggplot2) #needed for plots
 library(dplyr) #needed for reshaping/reformating data
-library(gridExtra) #needed to plot mupltiple plots together
+library(ggpubr) #needed to plot mupltiple plots together
 ```
 
 Packages loaded.
@@ -102,7 +102,8 @@ b <- ggplot(data=Figure2_data, aes(x=daynum, y=cyano_relbiovol)) + #plots cyano 
            xmin=-Inf, xmax=196, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
   annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
            xmin=258, xmax=Inf, ymin=0, ymax=Inf)  #shadow box highlights CyanoHAB season
-grid.arrange(a, b, nrow=2, ncol=1) #plot figures together
+fig2<- ggarrange(a, b, nrow=2, ncol=1) #plot figures together
+fig2 #print figure
 ggsave("Products/Figure2_color.png") #saves plot to Products folder
 write.csv(Figure2_data, file="Products/Figure2_data.csv") #save data used to make figure
 ```
