--- a/Impact_model_method/2cyanoHAB_severity.Rmd
+++ b/Impact_model_method/2cyanoHAB_severity.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "cyanoHAB_severity.Rmd"
 author: "Lauren A. Knose, ORISE-EPA"
-date: '2025-05-23'
+date: '2024-06-10'
 output: html_document
 editor_options: 
   chunk_output_type: console
@@ -17,6 +17,8 @@ a) loading the dependent packages...
 ```{r}
 library(ggplot2) #needed for plots
 library(dplyr) #needed for reshaping/reformating data
+library(ggpubr) #needed for graphing multiple plots
+library(zoo) #needed for na aggregate
 library(plotly) #needed for 3D plots
 ```
 
@@ -47,8 +49,9 @@ Me_Chl<- Chl %>%
   filter(lakeid=="ME", #filter for Lake Mendota data
          depth_range_m=="0-8", #filter for data from integrated samples 0 to 8m
          rep=="1",#remove QA analytic replicates
-         Yr>=2012 & Yr<=2018, #filter for study period
-         daynum >=189 & daynum <=265) %>% #filter for study period +- 7 days
+         Yr>=2013 & Yr<=2018, #filter for study period
+         Yr!=2017, #filter the error data out
+         daynum >=189 & daynum <=259) %>% #filter for study period +- 7 days
   filter(!is.na(Chla_ugL)) %>% #removes NAs in chl-a data
   select(sampledate, Yr, Chla_ugL, daynum) #selects only fields of interest
 summary(Me_Chl$Chla_ugL) #check for NAs
@@ -66,8 +69,8 @@ Me_cyano<- phyto %>%
   filter(lakeid=="ME", #filter for Lake Mendota data
          depth_range=="0-8m", #filter for data from integrated samples 0 to 8m
          division=="Cyanophyta", #filter for cyanobacteria
-         Yr>=2012 & Yr<=2018, #filter for study period
-         daynum >=189 & daynum <=265) %>% #filter for study period +- 7 days) %>% #filter for cyanobacteria data
+         Yr>=2013 & Yr<=2018, #filter for study period
+         daynum >=189 & daynum <=259) %>% #filter for study period +- 7 days) %>% #filter for cyanobacteria data
   group_by(sampledate) %>% #group all observations by sample date
   summarize(cyano_relbiovol=sum(relative_total_biovolume), #add all observations of cyanobacteria biovolumes together for each sample date
             CD_cellsmL=sum(cells_per_ml)) %>% #adds all the cyanobacteria cells/mL together for each sample date
@@ -84,7 +87,7 @@ CRB and CD data defined and filtered.
 a) Plotting Chl-a data available...
 
 ```{r}
-SI_fig3<- ggplot(data=subset(Me_Chl, Yr!=2017), aes(x=daynum, y=Chla_ugL)) + #plots Chl-a across date
+SI_fig3<- ggplot(data=Me_Chl, aes(x=daynum, y=Chla_ugL)) + #plots Chl-a across date
   geom_point() + #adds points at observations
   geom_line() + #adds lines between 
   facet_wrap(~Yr) +
@@ -105,14 +108,14 @@ Chl-a data plotted. Chl-a available from 2008 to 2012.
 b) Plotting CRB and CD data available...
 
 ```{r}
-### plot cyanobacteri relative biovolume by sample date ###
+### plot cyanobacteria relative biovolume by sample date ###
 a<- ggplot(data=Me_cyano, aes(x=sampledate, y=cyano_relbiovol))+
   geom_point() +  #point plot 
   geom_line() + #lines between points
   theme_classic(base_size=12)+
   geom_hline(yintercept=75, lty="dashed") +
-  labs(x="Date", y="Cyanobacteria Relative Biovolume 
-       (as % total phytoplankton biovolume)")
+  labs(x="Date", y="Cyanobacteria Biovolume 
+       (as % total phytoplankton)")
 ### plot cell density by 
 b<- ggplot(data=Me_cyano, aes(x=daynum, y=CD_cellsmL))+
   geom_point() +  #point plot 
@@ -127,33 +130,97 @@ b<- ggplot(data=Me_cyano, aes(x=daynum, y=CD_cellsmL))+
   annotate('rect', xmin=min(Me_cyano$daynum), xmax=max(Me_cyano$daynum),
            ymin=100000, ymax=Inf, alpha=.2, fill='red') +#severe CyanoHAB
   labs(x="Date", y="Cyanobacteria Density (cells/mL)")
-grid.arrange(a,b, nrow=2, ncol=1)
+SI_fig4<- ggarrange(a,b, nrow=2, ncol=1)
+SI_fig4 #print image
 ggsave("Products/SI_figures/Figure4.png") #saves plot to Products folder
 ```
 
 CRB and CD data plotted. 
 
-# Step 4. Bin observations into same daynumber each year:
+# Step 4. Estimate missing response values...
+
+a) merging data files...
+```{r}
+### merge data files ###
+Chla_CD<- merge(Me_Chl, Me_cyano, by="sampledate", all=TRUE) 
+```
+
+Data files merged.
+
+b) determining transformations...
+
+```{r}
+### plot histographs of transformed and non-transformed data ###
+par(mfrow=c(2,2)) #change plot parameters
+hist(Chla_CD$Chla_ugL, xlab="Chl-a (ug/L)", main="non-transformed")
+hist(log10(Chla_CD$Chla_ugL), xlab="Chl-a (ug/L)", main="log10-transformed")
+hist(Chla_CD$CD_cellsmL, xlab="Cyano Density (cells/mL)", main="non-transformed")
+hist(log10(Chla_CD$CD_cellsmL), xlab="Cyano Density (cells/mL)", main="log10-transformed")
+par(mfrow=c(1,1)) #return plot parameters to default
+```
+
+Transformations determined.
+
+c) defining and plot the model...
+
+```{r}
+### plot the model ###
+SI_fig20<- ggplot(data=Chla_CD, aes(x=log10(CD_cellsmL), Chla_ugL)) + 
+  geom_point()+
+  theme_classic() +
+  geom_smooth() +
+  labs(x="log10(Cyanobacteria density) (cells/mL)", y="Total Chl-a (ug/L)")
+SI_fig20
+ggsave(SI_fig20, file="Products/SI_figures/Figure20.png")
+
+### calculate the model outputs ###
+reg_Chla<- lm(data=Chla_CD, formula=Chla_ugL~log10(CD_cellsmL))
+summary(reg_Chla)
+png(filename="Products/SI_figures/Figure21.png")
+par(mfrow=c(2,2))
+plot(reg_Chla) 
+par(mfrow=c(1,1))
+dev.off()
+```
+
+Model output completed.
+
+d) filling missing values...
+
+```{r}
+### fill in missing Chla based on CD using model ###
+cyanoHAB<- Chla_CD %>%
+  mutate(predChla=predict(reg_Chla, .)) %>%
+  mutate(Chla_ugL=ifelse(is.na(Chla_ugL), predChla, Chla_ugL),
+         Yr.x=NULL, #remove double column
+         daynum.x=NULL, #remove double column
+         predChla=NULL) %>%#remove predicted column column
+  rename(Yr=Yr.y, daynum=daynum.y)
+```
+
+Chla plotted against CD.
+
+# Step 4. Bin observations into expected frequencies:
 
 a) defining expected observation frequencies...
 ```{r}
-Yr<- seq(from=2012, #define year start of study period
+Yr<- seq(from=2013, #define year start of study period
              to=2018, #define year end of study period
              by=1) #creates a sequence every 1 year
 Yr #prints the expected years of data
 daynum_bins<- seq(from=196, #define date start of CyanoHAB season
-                  to=258, #define date end of CyanoHAB season
+                  to=252, #define date end of CyanoHAB season
                   by=14) #creates a sequence every 14 days 
 daynum_bins #prints the expected observation dates of data
-cyanoHAB<- data.frame(Yr=rep(Yr, each=5), daynum_bin=rep(daynum_bins, times=7)) #create data frame with expected year and day number
+cyanoHAB_bins<- data.frame(Yr=rep(Yr, each=5), daynum_bin=rep(daynum_bins, times=6)) #create data frame with expected year and day number
 ```
 
 Defined expected observation frequency.
 
-b) binning Chl observed dates into expected dates...
+b) binning observed dates into expected dates...
 
 ```{r}
-Me_Chl2 <- Me_Chl  %>%
+cyanoHAB <- cyanoHAB  %>%
   mutate(daynum_bin=
          ifelse(daynum<(daynum_bins[2]-7), #if observation is <= bin 2 min
                 daynum_bins[1], #yes returns bin 1
@@ -166,43 +233,10 @@ Me_Chl2 <- Me_Chl  %>%
                      ifelse(daynum>=(daynum_bins[4]-7)&daynum<(daynum_bins[5]-7),
                             #if observation is > bin 4 min and <= bin 5 min 
                             daynum_bins[4], #yes returns bin 4
-                            daynum_bins[5])#no returns bin 5
-                     )
-              )
-       ) 
-)
-Me_Chl2<- Me_Chl2 %>% 
-  filter(!duplicated(cbind(Yr, daynum_bin), fromLast = TRUE)) %>% #remove first duplicate
-  filter(Yr!=2017) #remove erroneous data
-```
-
-Observed dates assigned to closest expected dates.
-
-b) binning CD observed dates into expected dates...
-
-```{r}
-Me_cyano2 <- Me_cyano  %>% 
-  filter(Yr>=2012 & Yr<=2018) %>% #filter for study years
-  filter(daynum >=189 & daynum <=265) %>% #filter for CyanoHAB season +- 7 days
-  mutate(daynum_bin=
-         ifelse(daynum<(daynum_bins[2]-7), #if observation is <= bin 2 min
-                daynum_bins[1], #yes returns bin 1
-                ifelse(daynum>=(daynum_bins[2]-7)&daynum<(daynum_bins[3]-7),
-              #if observation is > bin 2 min and <= bin 3 min
-              daynum_bins[2], #yes returns bin 2
-              ifelse(daynum>=(daynum_bins[3]-7)&daynum<(daynum_bins[4]-7),
-                     #if observation is > bin 3 min and <= bin 4 min
-                     daynum_bins[3], #yes returns bin 3
-                     ifelse(daynum>=(daynum_bins[4]-7)&daynum<(daynum_bins[5]-7),
-                            #if observation is > bin 4 min and <= bin 5 min 
-                            daynum_bins[4], #yes returns bin 4
-                            daynum_bins[5])#no returns bin 5
-                     )
-              )
-       ) 
-)
-Me_cyano2<- Me_cyano2 %>% 
-  filter(!duplicated(cbind(Yr, daynum_bin), fromLast = TRUE)) #remove first duplicate
+                            daynum_bins[5])))))#no returns bin 5
+                     
+cyanoHAB<- cyanoHAB %>% 
+  filter(!duplicated(cbind(Yr, daynum_bin), fromLast = TRUE))  #remove first duplicate
 ```
 
 Observed dates assigned to closest expected dates.
@@ -211,50 +245,89 @@ c) merging the data frames with expected bins...
 Note, R only merges two data frames at one time.
 
 ```{r}
-cyanoHAB_Chl<- merge(cyanoHAB, #x data frame
-                 Me_Chl2, #y data frame
-                 by=c("Yr","daynum_bin"),
-                 all.x=TRUE) #define the key fields
-cyanoHAB_Chl<- cyanoHAB_Chl %>%
-  filter(Yr!=2017) #remove missing year
-
-cyanoHAB_CD<- merge(cyanoHAB, #x data frame
-                 Me_cyano2, #y data frame
+cyanoHAB<- merge(cyanoHAB_bins, #x data frame
+                 cyanoHAB, #y data frame
                  by=c("Yr","daynum_bin"),
                  all.x=TRUE) #define the key fields
 ```
 
 Data merged.
 
-# Step 5. Check for NAs:
+# Step 5. Check for missing values and address:
+
+a) checking for NAs...
 
 ```{r}
 ### checking for NAs ###
-summary(cyanoHAB_Chl$Chla_ugL)
-summary(cyanoHAB_CD$CD_cellsmL)
-
-### fill missing values with the annual mean ###
-cyanoHAB_Chl<- cyanoHAB_Chl %>%
-  group_by(Yr) %>%
-  mutate(across(Chla_ugL, ~na.aggregate(., FUN=mean, na.rm=TRUE))) %>%
-  ungroup()
-
-cyanoHAB_CD<- cyanoHAB_CD %>%
-  group_by(Yr) %>%
-  mutate(across(CD_cellsmL, ~na.aggregate(., FUN=mean, na.rm=TRUE))) %>%
-  ungroup()
-### check that missing values replaced with means ###
-summary(cyanoHAB_Chl$Chla_ugL)
-summary(cyanoHAB_CD$CD_cellsmL)
+summary(cyanoHAB)
 ```
 
-Missing values interpolated.
+3 NAs identified.
 
-# Step 6. Save as new data file:
+b) if NAs randomly missing, replacing with annual mean...
 
 ```{r}
-write.csv(cyanoHAB_Chl, file="Cleaned_data/cyanoHAB_severity_Chla.csv")
-write.csv(cyanoHAB_CD, file="Cleaned_data/cyanoHAB_severity_CD.csv")
+### fill missing values with the annual mean ###
+cyanoHAB<- cyanoHAB %>%
+  group_by(Yr) %>%
+  mutate(across(Chla_ugL, ~na.aggregate(., FUN=mean, na.rm=TRUE)),
+         across(CD_cellsmL, ~na.aggregate(., FUN=mean, na.rm=TRUE))) %>%
+  ungroup()
+
+### check that missing values replaced with means ###
+summary(cyanoHAB$Chla_ugL)
+summary(cyanoHAB$CD_cellsmL)
+```
+
+NAs replaced.
+
+# Step 6. Interpolate weekly response values:
+
+a) define expected frequencies...
+
+```{r}
+### determine expected observation frequencies ###
+week_bins<- seq(from=196, #define date start of CyanoHAB season
+                  to=252, #define date end of CyanoHAB season
+                  by=7) #creates a sequence every week 
+week_bins #prints the expected observation dates of data
+
+### create data frame with the frequencies wanted ###
+df<- data.frame(x=rep(Yr, each=9),y=rep(week_bins, times=6))
+df<- df %>%
+  rename(Yr=x, week_bin=y)
+```
+
+Expected weekly frequencies defined.
+
+b) merging data to expected frequencies... 
+
+```{r}
+### merge observations with data frame of frequencies ###
+cyanoHAB2<- merge(df, cyanoHAB, by.x=c("Yr","week_bin"), 
+                      by.y=c("Yr", "daynum_bin"), all.x=TRUE) 
+```
+
+Weekly frequencies added to observations.
+
+c) interpolating missing daily values...
+
+```{r}
+### linearly interpolate the missing values ###
+cyanoHAB_approx<- cyanoHAB2 %>%  
+  group_by(Yr) %>%
+  mutate(Chla_ugL=na.approx(Chla_ugL, na.rm=F, rule=2),
+         CD_cellsmL=na.approx(CD_cellsmL, na.rm=F, rule=2)) %>% #interpolates where NA
+  ungroup() 
+```
+
+Daily observations interpolated.
+
+# Step 7. Save as new data files:
+
+```{r}
+### save the new Chla data file ###
+write.csv(cyanoHAB_approx, file="Cleaned_data/cyanoHAB_severity.csv")
 ```
 
 # Additional, 3D graphs of response variables for entire year:
@@ -288,7 +361,7 @@ Chla_interp<- Chla_interp %>%
   mutate(Yr=as.numeric(format(sampledate, "%Y")), #adds field with year
          daynum=as.numeric(format(sampledate, "%j")) #adds field with day of yr
          ) %>%
-  filter(Yr>=2012 & Yr<=2018) #filter for study period
+  filter(Yr>=2013 & Yr<=2018) #filter for study period
 
 SI_fig5a<- plot_ly(x=Chla_interp$Yr, 
   y=Chla_interp$daynum, 
@@ -299,6 +372,7 @@ SI_fig5a<- plot_ly(x=Chla_interp$Yr,
          yaxis=list(title="Day of Year"),
          zaxis=list(title="Chlorophyll-a (ug/L)")))
 SI_fig5a #prints the plot
+#save plot mannually
 ```
 
 b) 3D plot of CD across day number and year...
@@ -315,7 +389,7 @@ Me_cyanoRB<- phyto %>%
   filter(relbiovol<=100) %>% #remove any invalid records (>100%  not valid entry)   
   mutate(Yr=as.numeric(format(sampledate, "%Y")), #renames field
          daynum=as.numeric(format(sampledate, "%j"))) %>% #adds field with day
-  filter(Yr>=2012 & Yr<=2018) #filter for study years
+  filter(Yr>=2013 & Yr<=2018) #filter for study years
 
 date_range<- seq( #creates a vector of sequence data
   min(Me_cyanoRB$sampledate), #starting at the first sample date
@@ -333,7 +407,7 @@ CD_interp<- CD_interp %>%
   mutate(Yr=as.numeric(format(sampledate, "%Y")), #adds field with year
          daynum=as.numeric(format(sampledate, "%j")) #adds field with day of yr
          ) %>%
-  filter(Yr>=2012 & Yr<=2018) #filter for study period
+  filter(Yr>=2013 & Yr<=2018) #filter for study period
 
 SI_fig5b<- plot_ly(x=CD_interp$Yr, 
   y=CD_interp$daynum, 
@@ -344,14 +418,7 @@ SI_fig5b<- plot_ly(x=CD_interp$Yr,
          yaxis=list(title="Day of Year"),
          zaxis=list(title="Cyanobacteria Density (cells/mL)")))
 SI_fig5b #prints the figure
+#save manually
 ```
 
-c) save figures and data
-
-```{r}
-ggsave("Products/SI_figures/Figure5a_color.png") #saves plot to Products folder
-write.csv(Chla_interp, file="Products/SI_figures/Figure5a_data.csv") #saves data
-ggsave("Products/SI_figures/Figure5b_color.png") #saves plot to Products folder
-write.csv(CD_interp, file="Products/SI_figures/Figure5b_data.csv") #saves data
-```
-
+3D plots graphed.
