--- a/Impact_model_method/4TotalP_external_inflows.Rmd
+++ b/Impact_model_method/4TotalP_external_inflows.Rmd
@@ -114,9 +114,9 @@ C<- ggplot(data=YR_P, aes(x=log10(Q_Lday),y=log10(TotP_mgL)))+
   theme_classic()
 
 ### display regression plots together ###
-SIfig8<-ggarrange(A,B,C, ncol=3, nrow=1) #prints plots together
-SIfig8 #Prints the figure
-ggsave(SIfig8, file="Products/SI_figure8_color.png") #save figure
+SIfig6<-ggarrange(A,B,C, ncol=3, nrow=1) #prints plots together
+SIfig6 #Prints the figure
+ggsave(SIfig6, file="Products/SI_figures/Figure6_color.png") #save figure
 
 ### print regression model results ###
 PB_flowP<- lm(log10(PB_P$TotP_mgL) ~ log10(PB_P$Q_Lday)*daynum, data=PB_P) #write the model using simple linear regression
@@ -133,7 +133,7 @@ b) estimating loads for stream A...
 
 ```{r}
 ### use rLOADEST package to model P load by flow ###
-PB_flowP2<- loadReg(formula= TotP_mgL ~ model(7), #total P concentration ~ ln(flow rate) - ln(centroid flow rate)
+PB_flowP2<- loadReg(formula= TotP_mgL ~ model(3), #total P concentration ~ ln(flow rate) - ln(centroid flow rate)
                     data=PB_P, #data file
                     flow="Qout_cfs", #name the field with flow rates
                     dates="sampledate", #name the field with sample date
@@ -146,14 +146,15 @@ print(PB_flowP2, brief=FALSE, load.only=FALSE)
 PB_TotP_loads<- predLoad(PB_flowP2, newdata = PB_P, load.units="kg", by="day")
 
 ### use rLOADEST package to print diagnostic plots ###
-par(mfrow=c(2,3))
+png(filename="Products/SI_figures/Figure7.png", width=900, height= 600)
+layout(matrix(c(1,2,3,4,5,6), nrow=2, ncol=3))
 plot(PB_flowP2, which=1,set.up=FALSE)
 plot(PB_flowP2, which=2,set.up=FALSE)
 plot(PB_flowP2, which=3,set.up=FALSE)
 #plot(PB_flowP2, which=4,set.up=FALSE) #takes too long to plot...issue somewhere with package
 plot(PB_flowP2, which=5,set.up=FALSE)
 plot(PB_flowP2, which=6,set.up=FALSE)
-par(mfrow=c(1,1))
+dev.off()
 
 ### save as new data file ###
 write.csv(PB_TotP_loads, file="Cleaned_data/PB_TotP_loads.csv")
@@ -163,7 +164,7 @@ b) estimating loads for stream B...
 
 ```{r}
 ### use rLOADEST package to model P load by flow ###
-SMC_flowP2<- loadReg(formula= TotP_mgL ~ model(7), #total P concentration ~ ln(flow rate) - ln(centroid flow rate)
+SMC_flowP2<- loadReg(formula= TotP_mgL ~ model(4), #total P concentration ~ ln(flow rate) - ln(centroid flow rate)
                     data=SMC_P, #data file
                     flow="Qout_cfs", #name the field with flow rates
                     dates="sampledate", #name the field with sample date
@@ -176,12 +177,15 @@ print(SMC_flowP2, brief=FALSE, load.only=FALSE)
 SMC_TotP_loads<- predLoad(SMC_flowP2, newdata = SMC_P, load.units="kg", by="day")
 
 ### use rLOADEST package to print diagnostic plots ###
+png(filename="Products/SI_figures/Figure8.png", width=900, height= 600)
+layout(matrix(c(1,2,3,4,5,6), nrow=2, ncol=3))
 plot(SMC_flowP2, which=1,set.up=FALSE)
 plot(SMC_flowP2, which=2,set.up=FALSE)
 plot(SMC_flowP2, which=3,set.up=FALSE)
 #plot(SMC_flowP2, which=4,set.up=FALSE) #takes too long to plot...issue somewhere with package
 plot(SMC_flowP2, which=5,set.up=FALSE)
 plot(SMC_flowP2, which=6,set.up=FALSE)
+dev.off()
 
 ### save as new data file ###
 write.csv(SMC_TotP_loads, file="Cleaned_data/SMC_TotP_loads.csv")
@@ -191,7 +195,7 @@ c) estimating loads for stream C...
 
 ```{r}
 ### use rLOADEST package to model P load by flow ###
-YR_flowP2<- loadReg(formula= TotP_mgL ~ model(7), #total P concentration ~ ln(flow rate) - ln(centroid flow rate)
+YR_flowP2<- loadReg(formula= TotP_mgL ~ model(4), #total P concentration ~ ln(flow rate) - ln(centroid flow rate)
                     data=YR_P, #data file
                     flow="Qout_cfs", #name the field with flow rates
                     dates="sampledate", #name the field with sample date
@@ -204,12 +208,15 @@ print(YR_flowP2, brief=FALSE, load.only=FALSE)
 YR_TotP_loads<- predLoad(YR_flowP2, newdata = YR_P, load.units="kg", by="day")
 
 ### use rLOADEST package to print diagnostic plots ###
+png(filename="Products/SI_figures/Figure9.png", width=900, height= 600)
+layout(matrix(c(1,2,3,4,5,6), nrow=2, ncol=3))
 plot(YR_flowP2, which=1,set.up=FALSE)
 plot(YR_flowP2, which=2,set.up=FALSE)
 plot(YR_flowP2, which=3,set.up=FALSE)
 #plot(YR_flowP2, which=4,set.up=FALSE) #takes too long to plot...issue somewhere with package
 plot(YR_flowP2, which=5,set.up=FALSE)
 plot(YR_flowP2, which=6,set.up=FALSE)
+dev.off()
 
 ### save as new data file ###
 write.csv(YR_TotP_loads, file="Cleaned_data/YR_TotP_loads.csv")
@@ -268,22 +275,21 @@ a) viewing daily total P loading for each inflow...
 
 ```{r}
 ### plot daily load for each inflow and total load ###
-fig4<- ggplot(data=Inflows, 
+SI_fig10<- ggplot(data=Inflows, 
        aes(x=daynum, 
            y=Flux)) +
   geom_line()+
   facet_wrap(~Site) +
   theme_classic(base_size=12)+
   labs(y="Daily Stream Total P Load (kg/day)",
-       x="Day of Year",
-      caption="White highlight indicates CyanoHAB season.") +
+       x="Day of Year") +
   scale_y_continuous(trans="sqrt") + #transform y-axis scale to see small values
   annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
            xmin=-Inf, xmax=196, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
   annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
-           xmin=258, xmax=Inf, ymin=0, ymax=Inf)  #shadow box highlights CyanoHAB season
-fig4 #prints out plot
-ggsave(fig4, file="Products/Figure4.png")
+           xmin=252, xmax=Inf, ymin=0, ymax=Inf)  #shadow box highlights CyanoHAB season
+SI_fig10 #prints out plot
+ggsave(SI_fig10, file="Products/SI_figures/Figure10.png")
 ```
 
 Plotted Total P for day of year across the three inflows, for all years. 
@@ -292,8 +298,8 @@ b) calculating average daily total P loading during the CyanoHAB season...
 
 ```{r}
 Inflows_avg<- Inflows %>%
-  filter(daynum>= 196 & daynum <=258,
-         Yr>=2012 & Yr<=2018) %>% #filter for study period
+  filter(daynum>= 196 & daynum <=252,
+         Yr>=2013 & Yr<=2018) %>% #filter for study period
   group_by(Site) %>% #compute for each inflow
   summarise(mean=mean(Flux, na.rm=TRUE),#average daily total P loading
             se=(sd(Flux, na.rm=TRUE)/sqrt(length(Flux))),
@@ -308,8 +314,8 @@ c) calculating average annual total P load during CyanoHAB season...
 
 ```{r}
 Inflows_sumavg<- Inflows %>%
-  filter(daynum>= 196 & daynum <=258,
-         Yr>=2012 & Yr <= 2018,
+  filter(daynum>= 196 & daynum <=252,
+         Yr>=2013 & Yr <= 2018,
          Site=="All") %>%#filter for CyanoHAB season
   group_by(Yr) %>%
   summarize(sum=sum(Flux)) #sum dailyP loads 
@@ -318,17 +324,4 @@ mean(Inflows_sumavg$sum)
 sd(Inflows_sumavg$sum, na.rm=TRUE)/sqrt(length(Inflows_sumavg$sum))
 ```
 
-Average annual total P load calculated.
-
-d) calculating average annual stream p load...
-
-```{r}
-Inflows_yravg<- Inflows %>%
-  filter(Yr>2012 & Yr <= 2018,
-         Site=="All") %>%#filter for CyanoHAB season
-  group_by(Yr) %>%
-  summarize(sum=sum(Flux)) #sum annual P loads 
-Inflows_yravg
-mean(Inflows_yravg$sum)
-sd(Inflows_yravg$sum, na.rm=TRUE)/sqrt(length(Inflows_yravg$sum))
-```
+Average annual stream total P load calculated.
