--- a/Impact_model_method/2cyanoHAB_severity.Rmd
+++ b/Impact_model_method/2cyanoHAB_severity.Rmd
@@ -27,192 +27,150 @@ Packages loaded.
 b) loading the data...
 
 ```{r}
-### load chlorophyll-a data ###
-Chl<- read.csv(file="Original_data/ntl38_v5_chl.csv", header=TRUE) #has chl data
-
 ### load phytoplankton cell count data ###
 phyto<-read.csv(file="Original_data/ntl88_v13_phytoplankton.csv", header=TRUE) #has the phytoplankton community dataset
+
+### load chlorophyll-a data ###
+Chl<- read.csv(file="Original_data/ntl38_v5_chl.csv", header=TRUE) #has chl data
 ```
 
 Data loaded. 
 
-# Step 2. Format and filter data:
+# Step 2. Calculate cyanobacteria cell density (CD):
 
-a) Formatting and filtering data for total algal biomass (as Chl-a)...
+a) reformatting and filtering the data...
 
 ```{r}
+### reformatting and filtering phyto data ###
+Me_cyano<- phyto %>%
+  mutate(sampledate=as.Date(sampledate, origin="1899-12-30"), #tells R to format field as Date
+         Yr=as.numeric(format(sampledate, "%Y")), #renames field
+         daynum=as.numeric(format(sampledate, "%j"))) %>%  #adds field with day
+  rename(CD_cellsmL=cells_per_ml)%>% #renames field 
+  filter(lakeid=="ME", #filter for Lake Mendota data
+         depth_range=="0-8m", #filter for data from integrated samples 0 to 8m
+         division=="Cyanophyta", #filter for cyanobacteria
+         Yr>=2013 & Yr<=2018) %>% #filter for study period
+  select(sampledate, CD_cellsmL)
+
+### reformatting and filtering chl-a data ###
 Me_Chl<- Chl %>%
   mutate(sampledate=as.Date(sampledate, origin="1899-12-30"), #tells R to format field as Date
-         Chla_ugL= tri_chl_spec, #renames field to common name with units
          Yr=as.numeric(format(sampledate, "%Y")), #renames field
          daynum=as.numeric(format(sampledate, "%j"))) %>% #renames field to common name
+  rename(Chla_ugL= tri_chl_spec) %>% #renames field to common name with units)
   filter(lakeid=="ME", #filter for Lake Mendota data
          depth_range_m=="0-8", #filter for data from integrated samples 0 to 8m
          rep=="1",#remove QA analytic replicates
          Yr>=2013 & Yr<=2018, #filter for study period
-         Yr!=2017, #filter the error data out
-         daynum >=189 & daynum <=259) %>% #filter for study period +- 7 days
+         Yr!=2017) %>% #filter the error data out
   filter(!is.na(Chla_ugL)) %>% #removes NAs in chl-a data
   select(sampledate, Yr, Chla_ugL, daynum) #selects only fields of interest
-summary(Me_Chl$Chla_ugL) #check for NAs
 ```
 
-Chl-a data defined and filtered. 
+Data reformatted and filtered.
 
-b) Formatting and filtering data for cyanobacteria relative biovolume (CRB) and cyanobacteria density (CD)...
+b) calculating cyano cell density (CD)...
 
 ```{r}
-Me_cyano<- phyto %>%
-  mutate(sampledate=as.Date(sampledate, origin="1899-12-30"), #tells R to format field as Date
-  Yr=as.numeric(format(sampledate, "%Y")), #renames field
-         daynum=as.numeric(format(sampledate, "%j"))) %>%  #adds field with day
-  filter(lakeid=="ME", #filter for Lake Mendota data
-         depth_range=="0-8m", #filter for data from integrated samples 0 to 8m
-         division=="Cyanophyta", #filter for cyanobacteria
-         Yr>=2013 & Yr<=2018, #filter for study period
-         daynum >=189 & daynum <=259) %>% #filter for study period +- 7 days) %>% #filter for cyanobacteria data
+Me_cyano<- Me_cyano %>%  
   group_by(sampledate) %>% #group all observations by sample date
-  summarize(cyano_relbiovol=sum(relative_total_biovolume), #add all observations of cyanobacteria biovolumes together for each sample date
-            CD_cellsmL=sum(cells_per_ml)) %>% #adds all the cyanobacteria cells/mL together for each sample date
-  filter(cyano_relbiovol<=100) %>% #remove any invalid records (>100%  not valid entry)   
+  summarize(CD_cellsmL=sum(CD_cellsmL)) %>% #adds all the cyanobacteria cells/mL together for each sample date
   mutate(Yr=as.numeric(format(sampledate, "%Y")), #renames field
          daynum=as.numeric(format(sampledate, "%j")))  #adds field with day
-summary(Me_cyanoRB$CD_cellsmL) #check for NAs
 ```
 
-CRB and CD data defined and filtered.
+CD calculated.
 
 # Step 3. View the data available:
 
-a) Plotting Chl-a data available...
+a) plotting Chl-a data available...
 
 ```{r}
-SI_fig3<- ggplot(data=Me_Chl, aes(x=daynum, y=Chla_ugL)) + #plots Chl-a across date
+### filter data to cyanoHAB season ###
+fig3a_data<- Me_Chl %>%
+  filter(daynum>= 189 & daynum<= 259) #day num +- 7 days
+
+### plot cyanoHAB severity as chl-a over time ###
+SI_fig3a<- ggplot(data=fig3a_data, aes(x=daynum, y=Chla_ugL)) + #plots Chl-a across date
   geom_point() + #adds points at observations
   geom_line() + #adds lines between 
   facet_wrap(~Yr) +
   theme_classic(base_size=12) +
-  labs(x="Day of Year", y="Total Chl-a (ug/L)") +
-  annotate('rect', xmin=min(Me_Chl$daynum), xmax=max(Me_Chl$daynum),
+  labs(x="Day of Year", y="Total Chl-a (ug/L)", title="a)") +
+  annotate('rect', xmin=min(fig3a_data$daynum), xmax=max(fig3a_data$daynum),
            ymin=0, ymax=12, alpha=.2, fill='green') + #low/no CyanoHAB
-  annotate('rect', xmin=min(Me_Chl$daynum), xmax=max(Me_Chl$daynum),
+  annotate('rect', xmin=min(fig3a_data$daynum), xmax=max(fig3a_data$daynum),
            ymin=12, ymax=50, alpha=.2, fill='orange')+ #moderate CyanoHAB
-  annotate('rect', xmin=min(Me_Chl$daynum), xmax=max(Me_Chl$daynum),
+  annotate('rect', xmin=min(fig3a_data$daynum), xmax=max(fig3a_data$daynum),
            ymin=50, ymax=Inf, alpha=.2, fill='red') #severe CyanoHAB
-SI_fig3 #prints out figure
-ggsave("Products/SI_figures/Figure3.png") #saves plot to Products folder
+SI_fig3a
 ```
 
-Chl-a data plotted. Chl-a available from 2008 to 2012.
+Chl-a data plotted. 
 
-b) Plotting CRB and CD data available...
+b) Plotting CD data available...
 
 ```{r}
-### plot cyanobacteria relative biovolume by sample date ###
-a<- ggplot(data=Me_cyano, aes(x=sampledate, y=cyano_relbiovol))+
-  geom_point() +  #point plot 
-  geom_line() + #lines between points
-  theme_classic(base_size=12)+
-  geom_hline(yintercept=75, lty="dashed") +
-  labs(x="Date", y="Cyanobacteria Biovolume 
-       (as % total phytoplankton)")
-### plot cell density by 
-b<- ggplot(data=Me_cyano, aes(x=daynum, y=CD_cellsmL))+
+### filter data to cyanoHAB season ###
+fig3b_data<- Me_cyano %>%
+  filter(daynum>= 189 & daynum<= 259) #day num +- 7 days
+
+### plot cyanoHAB severity as CD over time ###
+SI_fig3b<- ggplot(data=fig3b_data, aes(x=daynum, y=CD_cellsmL))+
   geom_point() +  #point plot 
   geom_line() + #lines between points
   facet_wrap(~Yr) + #by year
   theme_classic(base_size=12)+
-  scale_y_continuous(trans="log10") +
-  annotate('rect', xmin=min(Me_cyano$daynum), xmax=max(Me_cyano$daynum),
+  annotate('rect', xmin=min(fig3b_data$daynum), xmax=max(fig3b_data$daynum),
            ymin=0, ymax=20000, alpha=.2, fill='green') + #low/no CyanoHAB
-  annotate('rect', xmin=min(Me_cyano$daynum), xmax=max(Me_cyano$daynum),
+  annotate('rect', xmin=min(fig3b_data$daynum), xmax=max(fig3b_data$daynum),
            ymin=20000, ymax=100000, alpha=.2, fill='orange')+ #moderate CyanoHAB
-  annotate('rect', xmin=min(Me_cyano$daynum), xmax=max(Me_cyano$daynum),
+  annotate('rect', xmin=min(fig3b_data$daynum), xmax=max(fig3b_data$daynum),
            ymin=100000, ymax=Inf, alpha=.2, fill='red') +#severe CyanoHAB
-  labs(x="Date", y="Cyanobacteria Density (cells/mL)")
-SI_fig4<- ggarrange(a,b, nrow=2, ncol=1)
-SI_fig4 #print image
-ggsave("Products/SI_figures/Figure4.png") #saves plot to Products folder
+  labs(x="Day of Year", y="Cyanobacteria Density (cells/mL)", title="b)")
+SI_fig3b #print image
 ```
 
-CRB and CD data plotted. 
 
-# Step 4. Estimate missing response values...
+c) plotting chla and CD together...
 
-a) merging data files...
+```{r}
+SI_fig3<- ggarrange(SI_fig3a, SI_fig3b, ncol=2, nrow=1, widths=c(0.5, 0.5))
+SI_fig3
+ggsave("Products/SI_figures/Figure3_color.png") #saves plot to Products folder
+```
+
+Chla and CD data plotted. 
+
+d) merging the data files...
 ```{r}
 ### merge data files ###
-Chla_CD<- merge(Me_Chl, Me_cyano, by="sampledate", all=TRUE) 
+Chla_CD<- merge(Me_Chl, Me_cyano, by=c("sampledate", "Yr", "daynum"), all=TRUE) 
 ```
 
 Data files merged.
 
-b) determining transformations...
-
-```{r}
-### plot histographs of transformed and non-transformed data ###
-par(mfrow=c(2,2)) #change plot parameters
-hist(Chla_CD$Chla_ugL, xlab="Chl-a (ug/L)", main="non-transformed")
-hist(log10(Chla_CD$Chla_ugL), xlab="Chl-a (ug/L)", main="log10-transformed")
-hist(Chla_CD$CD_cellsmL, xlab="Cyano Density (cells/mL)", main="non-transformed")
-hist(log10(Chla_CD$CD_cellsmL), xlab="Cyano Density (cells/mL)", main="log10-transformed")
-par(mfrow=c(1,1)) #return plot parameters to default
-```
-
-Transformations determined.
-
-c) defining and plot the model...
-
-```{r}
-### plot the model ###
-SI_fig20<- ggplot(data=Chla_CD, aes(x=log10(CD_cellsmL), Chla_ugL)) + 
-  geom_point()+
-  theme_classic() +
-  geom_smooth() +
-  labs(x="log10(Cyanobacteria density) (cells/mL)", y="Total Chl-a (ug/L)")
-SI_fig20
-ggsave(SI_fig20, file="Products/SI_figures/Figure20.png")
-
-### calculate the model outputs ###
-reg_Chla<- lm(data=Chla_CD, formula=Chla_ugL~log10(CD_cellsmL))
-summary(reg_Chla)
-png(filename="Products/SI_figures/Figure21.png")
-par(mfrow=c(2,2))
-plot(reg_Chla) 
-par(mfrow=c(1,1))
-dev.off()
-```
-
-Model output completed.
-
-d) filling missing values...
-
-```{r}
-### fill in missing Chla based on CD using model ###
-cyanoHAB<- Chla_CD %>%
-  mutate(predChla=predict(reg_Chla, .)) %>%
-  mutate(Chla_ugL=ifelse(is.na(Chla_ugL), predChla, Chla_ugL),
-         Yr.x=NULL, #remove double column
-         daynum.x=NULL, #remove double column
-         predChla=NULL) %>%#remove predicted column column
-  rename(Yr=Yr.y, daynum=daynum.y)
-```
-
-Chla plotted against CD.
-
 # Step 4. Bin observations into expected frequencies:
 
 a) defining expected observation frequencies...
+
 ```{r}
+### define the number of observation years ###
 Yr<- seq(from=2013, #define year start of study period
              to=2018, #define year end of study period
              by=1) #creates a sequence every 1 year
 Yr #prints the expected years of data
+
+### define the observation frequency ###
 daynum_bins<- seq(from=196, #define date start of CyanoHAB season
                   to=252, #define date end of CyanoHAB season
                   by=14) #creates a sequence every 14 days 
 daynum_bins #prints the expected observation dates of data
-cyanoHAB_bins<- data.frame(Yr=rep(Yr, each=5), daynum_bin=rep(daynum_bins, times=6)) #create data frame with expected year and day number
+
+### create data frame with expected observations ###
+cyanoHAB_bins<- data.frame(Yr=rep(Yr, each=5), #repeat Yr for every daynum 
+                           daynum_bin=rep(daynum_bins, times=6)) #repeat daynum for every year
 ```
 
 Defined expected observation frequency.
@@ -220,7 +178,8 @@ Defined expected observation frequency.
 b) binning observed dates into expected dates...
 
 ```{r}
-cyanoHAB <- cyanoHAB  %>%
+Chla_CD <- Chla_CD  %>%
+  filter(daynum>= 189 & daynum<= 259) %>% #filter for cyanoHAB season
   mutate(daynum_bin=
          ifelse(daynum<(daynum_bins[2]-7), #if observation is <= bin 2 min
                 daynum_bins[1], #yes returns bin 1
@@ -235,7 +194,7 @@ cyanoHAB <- cyanoHAB  %>%
                             daynum_bins[4], #yes returns bin 4
                             daynum_bins[5])))))#no returns bin 5
                      
-cyanoHAB<- cyanoHAB %>% 
+Chla_CD<- Chla_CD %>% 
   filter(!duplicated(cbind(Yr, daynum_bin), fromLast = TRUE))  #remove first duplicate
 ```
 
@@ -246,7 +205,7 @@ Note, R only merges two data frames at one time.
 
 ```{r}
 cyanoHAB<- merge(cyanoHAB_bins, #x data frame
-                 cyanoHAB, #y data frame
+                 Chla_CD, #y data frame
                  by=c("Yr","daynum_bin"),
                  all.x=TRUE) #define the key fields
 ```
@@ -267,10 +226,19 @@ summary(cyanoHAB)
 b) if NAs randomly missing, replacing with annual mean...
 
 ```{r}
+### calculate annual means ###
+yr_mean<- cyanoHAB %>%
+  group_by(Yr) %>%
+  summarize(avg_Chla=mean(Chla_ugL, na.rm=TRUE),
+            se_Chla=(sd(Chla_ugL, na.rm=TRUE)/sqrt(length(Chla_ugL))), 
+            avg_CD=mean(CD_cellsmL, na.rm=TRUE),
+            se_CD=(sd(CD_cellsmL, na.rm=TRUE)/sqrt(length(CD_cellsmL))))
+yr_mean
+
 ### fill missing values with the annual mean ###
 cyanoHAB<- cyanoHAB %>%
   group_by(Yr) %>%
-  mutate(across(Chla_ugL, ~na.aggregate(., FUN=mean, na.rm=TRUE)),
+  mutate(across(Chla_ugL, ~na.aggregate(., FUN=mean, na.rm=FALSE)),
          across(CD_cellsmL, ~na.aggregate(., FUN=mean, na.rm=TRUE))) %>%
   ungroup()
 
@@ -293,9 +261,7 @@ week_bins<- seq(from=196, #define date start of CyanoHAB season
 week_bins #prints the expected observation dates of data
 
 ### create data frame with the frequencies wanted ###
-df<- data.frame(x=rep(Yr, each=9),y=rep(week_bins, times=6))
-df<- df %>%
-  rename(Yr=x, week_bin=y)
+week_bins<- data.frame(Yr=rep(Yr, each=9),week_bin=rep(week_bins, times=6))
 ```
 
 Expected weekly frequencies defined.
@@ -304,8 +270,8 @@ b) merging data to expected frequencies...
 
 ```{r}
 ### merge observations with data frame of frequencies ###
-cyanoHAB2<- merge(df, cyanoHAB, by.x=c("Yr","week_bin"), 
-                      by.y=c("Yr", "daynum_bin"), all.x=TRUE) 
+cyanoHAB2<- merge(week_bins, cyanoHAB, by.x=c("Yr","week_bin"), 
+                      by.y=c("Yr", "daynum_bin"), all=TRUE) 
 ```
 
 Weekly frequencies added to observations.
@@ -323,14 +289,30 @@ cyanoHAB_approx<- cyanoHAB2 %>%
 
 Daily observations interpolated.
 
-# Step 7. Save as new data files:
+# Step 7. Add fields with lagged values:
+
+```{r}
+cyanoHAB_approx<- cyanoHAB_approx %>%
+  mutate(Chla_ugL_k7=lag(Chla_ugL, n=1), 
+         CD_cellsmL_k7=lag(CD_cellsmL, n=1),
+         Chla_ugL_k14=lag(Chla_ugL, n=2), 
+         CD_cellsmL_k14=lag(CD_cellsmL, n=2),
+         Chla_ugL_k21=lag(Chla_ugL, n=3), 
+         CD_cellsmL_k21=lag(CD_cellsmL, n=3),
+         Chla_ugL_k28=lag(Chla_ugL, n=4), 
+         CD_cellsmL_k28=lag(CD_cellsmL, n=4)) 
+```
+
+Field with lagged values added.
+
+# Step 8. Save as new data files:
 
 ```{r}
 ### save the new Chla data file ###
 write.csv(cyanoHAB_approx, file="Cleaned_data/cyanoHAB_severity.csv")
 ```
 
-# Additional, 3D graphs of response variables for entire year:
+# Step 9: Make 3D graphs of response variables for entire year:
 
 a) 3D plot of Chl-a across day number and year...
 
@@ -363,7 +345,7 @@ Chla_interp<- Chla_interp %>%
          ) %>%
   filter(Yr>=2013 & Yr<=2018) #filter for study period
 
-SI_fig5a<- plot_ly(x=Chla_interp$Yr, 
+SI_fig4a<- plot_ly(x=Chla_interp$Yr, 
   y=Chla_interp$daynum, 
   z=Chla_interp$Chla_ugL, 
   type="scatter3d", mode="markers",
@@ -371,7 +353,7 @@ SI_fig5a<- plot_ly(x=Chla_interp$Yr,
   layout(scene=list(xaxis=list(title="Year"),
          yaxis=list(title="Day of Year"),
          zaxis=list(title="Chlorophyll-a (ug/L)")))
-SI_fig5a #prints the plot
+SI_fig4a #prints the plot
 #save plot mannually
 ```
 
@@ -409,7 +391,7 @@ CD_interp<- CD_interp %>%
          ) %>%
   filter(Yr>=2013 & Yr<=2018) #filter for study period
 
-SI_fig5b<- plot_ly(x=CD_interp$Yr, 
+SI_fig4b<- plot_ly(x=CD_interp$Yr, 
   y=CD_interp$daynum, 
   z=CD_interp$CD_cellsmL, 
   type="scatter3d", mode="markers",
@@ -417,7 +399,7 @@ SI_fig5b<- plot_ly(x=CD_interp$Yr,
   layout(scene=list(xaxis=list(title="Year"),
          yaxis=list(title="Day of Year"),
          zaxis=list(title="Cyanobacteria Density (cells/mL)")))
-SI_fig5b #prints the figure
+SI_fig4b #prints the figure
 #save manually
 ```
 
